# Roofline-Analysis

./: .gitignore  .gitmodules  FA4_SM100_DETAILED_REFERENCE.md  FA4_SM100_IMPLEMENTATION_PLAN.md  FA4_SM100_QUICK_REFERENCE.md  FINAL_SUMMARY.md  README.md  cutlass_host_function_Tensorgmemodiv128i64div1281_Tensorgmemodiv128i64div1281_Tensorgmemodiv512i64div5121.sm_103a.cubin  gemm3.nsys-rep  gemm_prod.nsys-rep  run_b200.sh
.claude/: settings.json
attention_kernels/: CMakeLists.txt  QUICKSTART.md  README.md
attention_kernels/kernels/: stage0_naive.cu  stage1_tiled.cu  stage2_shared_mem.cu  stage3_tensor_core.cu  stage4_final.cu
attention_kernels/python/: attention_wrapper.py  benchmark.py
attention_kernels/results/: gpu_info.txt
attention_kernels/scripts/: run_experiment.sh
cute_attention/: CMakeLists.txt  README.md
cute_attention/cluster_decode/: EXTERNAL_REFERENCES.md  README.md  SEMANTIC_ALIGNMENT.md  __init__.py  analyze_sglang_matrix.py  benchmark_matrix_sglang.py  benchmark_projection_tensorcore.py  benchmark_sglang.py  benchmark_tc_breakdown.py  cluster_decode.py  cluster_decode_reduce.py  cluster_decode_split.py  cluster_megakernel.py  cluster_megakernel_tc.py  cluster_primitives.py  common.py  debug_dsm_scalar.py  debug_megakernel.py  debug_stages.py  external_reference.py  megakernel_reference.py  verify_correctness.py
cute_attention/cluster_decode/result/: sglang_matrix.csv  sglang_matrix_20260426_050033.csv  sglang_matrix_20260426_062727.csv  sglang_matrix_20260426_063544.csv  sglang_matrix_20260426_064039.csv  sglang_matrix_20260426_064649.csv  sglang_matrix_20260426_071116.csv  sglang_matrix_20260426_082550.csv  sglang_matrix_20260426_082726.csv  sglang_matrix_20260426_085738.csv  sglang_matrix_20260426_090426.csv  sglang_matrix_20260426_091042.csv  sglang_matrix_20260426_091628.csv  sglang_matrix_20260426_091953.csv  sglang_matrix_20260426_093400.csv  sglang_matrix_20260426_093852.csv  sglang_matrix_20260426_094452.csv
cute_attention/cluster_decode/tests/: test_correctness.py  test_external_reference.py  test_megakernel.py
cute_attention/kernels/: flash_attention.cuh  flash_attention_kernel.cu  stage0_naive.cuh  stage1_tiled.cuh  stage2_smem.cuh  stage3_mma.cuh  stage4_final.cuh
cute_attention/python/: benchmark.py
cute_attention/python/cute_attention/: __init__.py
cute_attention/python_dsl/: README.md  README_COMPREHENSIVE.md  analyze_b200.py  analyze_results.py  benchmark.py  benchmark_all_stages.py  benchmark_comprehensive.py  fa4_cute_stages.py  fa4_optimization_analysis.py  flash_attention_dsl.py  flash_attention_stages.py  naive_attention.py  plot_results.py  roofline_analysis.py  run_benchmark.sh  run_comprehensive.sh  run_experiment.sh  test_kernel.py  verify_cluster_decode.py
cute_attention/python_dsl/.cache/: stage12_autotune.json  stage13_autotune.json  stage16_autotune.json  stage17_autotune.json  stage18_autotune.json  stage19_autotune.json  stage20_autotune.json  stage21_autotune.json  stage22_autotune.json
cute_attention/python_dsl/kernels/: __init__.py  baseline_fa4.py  baseline_sdpa.py  cluster_decode.py  cluster_decode_split.py  common.py  future.py  reference.py  registry.py  stage0_attention.py  stage0_naive.py  stage10_hybrid.py  stage11_mma.py  stage12_pipeline2.py  stage13_multistage.py  stage14_warpspec.py  stage15_sm90style.py  stage16_multistage.py  stage17_multistage.py  stage17_warpspec_backend.py  stage18_sm90_backend.py  stage18_sm90_features.py  stage19_warpgroup.py  stage19_warpgroup_backend.py  stage1_fa2.py  stage20_warpspec.py  stage20_warpspec_backend.py  stage21_state_machine.py  stage21_state_machine_backend.py  stage22_blackwell_backend.py  stage22_rewrite_backend.py  stage22_tma.py  stage22_tma_backend.py  stage2_colblocked.py  stage3_blocked.py  stage4_mma.py  stage5_pipeline.py  stage6_q16.py  stage7_score16.py  stage8_noscore.py  (+1 more)
cute_attention/python_dsl/tests/: conftest.py  test_benchmark.py  test_correctness.py
cute_attention/results/: benchmark_20260414T102548Z.json  benchmark_comprehensive_20260414T113018Z.json  benchmark_comprehensive_20260414T114900Z.json  benchmark_comprehensive_20260414T115947Z.json  efficiency_analysis.json  gpu_info.txt
cute_attention/scripts/: build_b200.sh  run_all.sh
cute_gemm/: README.md  autotune.py  benchmark.py  configs.py  cublaslt_benchmark.cu  lower_compare.py  mma_gemm_1cta_cutedsl.py  mma_gemm_2cta_commit_cutedsl.py  mma_gemm_2cta_cutedsl.py  mma_gemm_2cta_manual_phase_mask_cutedsl.py  mma_gemm_2cta_pipeline_cutedsl.py  mma_gemm_2cta_tma_2stage_cutedsl.py  mma_gemm_2cta_tma_3stage_cutedsl.py  mma_gemm_2cta_tma_6stage_cutedsl.py  mma_gemm_2cta_tma_autotune_singlekernel_cutedsl.py  mma_gemm_2cta_tma_configurable_cutedsl.py  mma_gemm_2cta_tma_nopipeline_cutedsl.py  mma_gemm_2cta_tma_pipeline_cutedsl.py  mma_gemm_2cta_tma_pipeline_tma_store_cutedsl.py  mma_gemm_2cta_tma_pipeline_tma_store_tile256x256x128_cutedsl.py  mma_gemm_2cta_tma_pipeline_tma_store_ws3epi_cutedsl.py  mma_gemm_2cta_tma_pipeline_tma_store_ws5epi_cutedsl.py  mma_gemm_cutedsl.py  ref.py  run.sh  swizzle_debug_notes.md
decodebench/: backend_notes.md  external_benchmark.py  flashattn_kvcache_benchmark.py  flashattn_kvcache_kernel.py  flashattn_mla_benchmark.py  flashattn_mla_kernel.py  flashinfer_benchmark.py  flashinfer_kernel.py  flashinfer_xqa_benchmark.py  flashmla_benchmark.py  flashmla_kernel.py  matrix_b200.py  matrix_b200_extended.py  matrix_b200_framework.py  matrix_mla_b200.py  ncu_utils.py  profile_ncu.py  project_notes.py  run_matrix.py  summarize_results.py  third_party_paths.py  torch_sdpa_benchmark.py  torch_sdpa_kernel.py  trtllm_decode_benchmark.py  trtllm_decode_kernel.py  trtllm_mla_benchmark.py  trtllm_mla_kernel.py  (+5 more)
fa4/: README.md  (+12 more)
(+891 files in other folders)
